# IronClaw

./: .dockerignore  .env.example  .gitignore  Dockerfile  PHASE_1_IMPLEMENTATION.md  PHASE_4_SUMMARY.md  PHASE_7_SUMMARY.md  PHASE_8_COMPLETION_SUMMARY.md  PRODUCTION_READY_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.bat  test_installation.py
.github/workflows/: ci.yml  deploy.yml  docker-build.yml
.zenflow/tasks/meltron-5af4/: plan.md  spec.md
config/: prometheus.yml
config/grafana/dashboards/: dashboard-provider.yml  ironclaw-overview.json
config/nginx/: nginx.conf
docs/: PHASE3_SUMMARY.md  PHASE5_COMPLETION.md  PHASE6_SECURITY_SUITE_SUMMARY.md  PHASE9_COMPLETION.md  PHASE_10_COMPLETION.md  PHASE_2_SUMMARY.md  PHASE_4_COMPLETION.md  PHASE_8_LEARNING.md
docs/production/: MONITORING.md  PRODUCTION_DEPLOYMENT.md
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
plugins/: README.md
plugins/calculator/: __init__.py  plugin.py
plugins/file_ops/: __init__.py  plugin.py
plugins/news/: __init__.py  plugin.py
plugins/weather/: __init__.py  plugin.py
plugins/web_search/: __init__.py  plugin.py
src/: config.py
src/action/automation/: __init__.py  browser.py  desktop.py  executor.py  permissions.py  rollback.py  workflow.py
src/api/: learning.py  main.py
src/api/routes/: security.py  vision.py
src/api/v1/: __init__.py  automation.py  chat.py  collaboration.py  learning.py  plugins.py  reasoning.py  security.py  voice.py  websocket.py
src/cognitive/learning/: __init__.py  code_improver.py  performance_analyzer.py  preference_tracker.py  rollback_manager.py  sandbox.py
src/cognitive/llm/: base_provider.py  groq_provider.py  openai_provider.py  router.py  router_rl.py  types.py
src/cognitive/memory/: __init__.py  context_manager.py  embeddings.py  semantic_memory.py  vector_store.py
src/cognitive/quality/: __init__.py  monitor.py
src/cognitive/reasoning/: __init__.py  chain_of_thought.py  tree_of_thought.py
src/database/: connection.py  models.py  redis_client.py
src/perception/vision/: screen_capture.py
src/perception/voice/: __init__.py  emotion.py  models.py  stt.py  tts.py  vad.py  wake_word.py
src/plugins/: __init__.py  base.py  hot_reload.py  registry.py  sandbox.py
src/realtime/: __init__.py  collaboration.py  events.py  manager.py  message_queue.py  progress.py  streaming.py
src/security/: __init__.py  ai_scanner.py  burp_client.py  cve_database.py  cvss_calculator.py  models.py  nuclei_scanner.py  orchestrator.py  poc_generator.py  report_generator.py
src/utils/: error_tracking.py  logging.py  metrics.py  tracing.py
src/vision/: __init__.py  annotation.py  capture.py  detection.py  ocr.py  understanding.py
tests/: conftest.py
tests/chaos/: chaos_tests.py
tests/integration/: test_api.py  test_automation_phase5.py  test_learning_phase8.py  test_security_suite.py  test_vision.py
tests/integration/phase3/: __init__.py  test_memory.py  test_reasoning.py  test_router_quality.py
tests/integration/phase9/: __init__.py  test_collaboration.py  test_streaming.py  test_websocket_connection.py
tests/integration/phase_2/: __init__.py  test_plugins.py
tests/integration/phase_7/: __init__.py  test_voice_api.py
tests/load/: benchmark.py  locustfile.py
tests/unit/phase_7/: __init__.py  test_voice_models.py
