[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ironclaw"
version = "0.1.0"
description = "Next-generation AI assistant - 10x more powerful than Aether AI"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Web Framework
    "fastapi[all]>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    
    # Database & Caching
    "sqlalchemy[asyncio]>=2.0.32,<3.0.0",
    "asyncpg>=0.29.0,<0.30.0",  # PostgreSQL async driver
    "redis[hiredis]>=5.0.8,<6.0.0",
    "alembic>=1.13.0,<2.0.0",  # Database migrations
    
    # AI Providers
    "openai>=1.58.0,<2.0.0",
    "anthropic>=0.42.0,<1.0.0",
    "google-generativeai>=0.8.0,<1.0.0",
    "groq>=0.12.0,<1.0.0",
    
    # Intel NPU & Local AI
    "openvino>=2024.5.0,<2025.0.0",
    "openvino-tokenizers>=2024.5.0,<2025.0.0",
    "optimum-intel>=1.20.0,<2.0.0",
    "transformers>=4.46.0,<5.0.0",
    "torch>=2.5.0,<3.0.0",  # Required for model loading
    
    # Vector Database
    "qdrant-client>=1.12.0,<2.0.0",
    
    # Monitoring & Observability
    "prometheus-client>=0.21.0,<0.22.0",
    "loguru>=0.7.2,<0.8.0",
    "opentelemetry-api>=1.27.0,<2.0.0",
    "opentelemetry-sdk>=1.27.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1.0.0",
    
    # Utilities
    "python-dotenv>=1.0.1,<2.0.0",
    "httpx>=0.27.0,<0.28.0",
    "aiofiles>=24.1.0,<25.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "pyjwt>=2.9.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-jose>=3.3.0,<4.0.0",
    
    # Plugin System
    "psutil>=6.1.0,<7.0.0",
    "watchdog>=5.0.0,<6.0.0",
    "duckduckgo-search>=6.3.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "ruff>=0.7.0,<0.8.0",
    "mypy>=1.13.0,<2.0.0",
    "black>=24.10.0,<25.0.0",
    "ipython>=8.28.0,<9.0.0",
    "httpx>=0.27.0,<0.28.0",
]

vision = [
    "mss>=9.0.0,<10.0.0",  # Fast screen capture
    "opencv-python>=4.10.0,<5.0.0",
    "pillow>=10.4.0,<11.0.0",
    "pytesseract>=0.3.13,<1.0.0",
    "paddleocr>=2.8.0,<3.0.0",
    "ultralytics>=8.3.0,<9.0.0",  # YOLO v8
    "numpy>=1.24.0,<2.0.0",  # For image processing
]

voice = [
    "faster-whisper>=1.1.0,<2.0.0",
    "edge-tts>=6.1.18,<7.0.0",
    "pvporcupine>=3.0.3,<4.0.0",  # Wake word detection
    "silero-vad>=5.1.2,<6.0.0",
    "librosa>=0.10.0,<1.0.0",  # Audio processing for emotion detection
    "soundfile>=0.12.0,<1.0.0",  # Audio file I/O for librosa
]

automation = [
    "playwright>=1.48.0,<2.0.0",
    "pyautogui>=0.9.54,<1.0.0",
    "pyperclip>=1.9.0,<2.0.0",
]

security = [
    "nuclei>=3.0.0,<4.0.0",
    "bandit>=1.8.0,<2.0.0",
    "safety>=3.2.0,<4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
timeout = 300
